--- a/black lbv girls/vendeuse_dashboard.html
+++ b/black lbv girls/vendeuse_dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Espace Vendeuse - RetailOS</title>
+    <title>Espace Vendeuse - Black LBV Girl</title>
 
     <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -68,7 +68,7 @@
                 class="w-10 h-10 bg-primary rounded-xl flex items-center justify-center text-white shadow-lg shadow-primary/20">
                 <span class="material-symbols-outlined text-xl">storefront</span>
             </div>
-            <h1 class="hidden lg:block ml-3 text-lg font-bold tracking-tight">RetailOS</h1>
+            <h1 class="hidden lg:block ml-3 text-lg font-bold tracking-tight">Black LBV Girl</h1>
         </div>
 
         <!-- Nav -->
@@ -172,7 +172,7 @@
                         <div class="flex justify-between items-start">
                             <div>
                                 <p class="text-xs font-medium text-gray-500 uppercase">Ventes du jour</p>
-                                <h4 class="text-2xl font-bold text-gray-900 mt-1" id="dash-sales-today">0 €</h4>
+                                <h4 class="text-2xl font-bold text-gray-900 mt-1" id="dash-sales-today">0 FCFA</h4>
                             </div>
                             <div class="p-2 bg-blue-50 text-blue-600 rounded-lg">
                                 <span class="material-symbols-outlined">payments</span>
@@ -196,7 +196,7 @@
                             </div>
                         </div>
                         <div class="mt-4 text-xs text-gray-400">
-                            Panier moyen: <span class="font-medium text-gray-700" id="dash-avg-cart">0 €</span>
+                            Panier moyen: <span class="font-medium text-gray-700" id="dash-avg-cart">0 FCFA</span>
                         </div>
                     </div>
 
@@ -327,15 +327,15 @@
                         <div class="space-y-2 mb-4">
                             <div class="flex justify-between text-sm text-gray-500">
                                 <span>Sous-total</span>
-                                <span id="cart-subtotal">0.00 €</span>
+                                <span id="cart-subtotal">0 FCFA</span>
                             </div>
                             <div class="flex justify-between text-sm text-gray-500">
                                 <span>Taxes (0%)</span> <!-- Simplified tax for now -->
-                                <span id="cart-tax">0.00 €</span>
+                                <span id="cart-tax">0 FCFA</span>
                             </div>
                             <div class="flex justify-between items-center pt-2">
                                 <span class="font-bold text-gray-900 text-lg">Total</span>
-                                <span class="font-bold text-primary text-2xl" id="cart-total">0.00 €</span>
+                                <span class="font-bold text-primary text-2xl" id="cart-total">0 FCFA</span>
                             </div>
                         </div>
 
@@ -432,9 +432,9 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/storage.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/vendeuse.js"></script>
+    <script src="./js/storage.js"></script>
+    <script src="./js/auth.js"></script>
+    <script src="./js/vendeuse.js"></script>
 </body>
 
 </html>
