--- a/black lbv girls/admin_dashboard.html
+++ b/black lbv girls/admin_dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Admin - RetailOS</title>
+    <title>Dashboard Admin - Black LBV Girl</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,7 +51,7 @@
             <div class="w-8 h-8 bg-primary rounded-lg flex items-center justify-center text-white mr-3">
                 <span class="material-symbols-outlined text-xl">storefront</span>
             </div>
-            <h1 class="text-xl font-bold tracking-tight">RetailOS</h1>
+            <h1 class="text-xl font-bold tracking-tight">Black LBV Girl</h1>
         </div>
 
         <!-- Nav -->
@@ -183,7 +183,7 @@
                         </div>
                         <h3 class="text-gray-500 text-sm font-medium">Meilleure Vendeuse</h3>
                         <p class="text-2xl font-bold text-gray-900 mt-1" id="kpi-top-seller">-</p>
-                        <p class="text-sm text-gray-400 mt-1" id="kpi-top-seller-amount">- €</p>
+                        <p class="text-sm text-gray-400 mt-1" id="kpi-top-seller-amount">- FCFA</p>
                     </div>
 
                     <!-- KPI 4 -->
@@ -477,7 +477,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
                     <div class="bg-blue-50/50 p-4 rounded-xl border border-blue-100">
                         <p class="text-xs font-semibold text-blue-600 uppercase tracking-wide mb-1">Total Ventes</p>
-                        <p class="text-2xl font-bold text-gray-900" id="seller-detail-total">0,00 €</p>
+                        <p class="text-2xl font-bold text-gray-900" id="seller-detail-total">0 FCFA</p>
                     </div>
                     <div class="bg-purple-50/50 p-4 rounded-xl border border-purple-100">
                         <p class="text-xs font-semibold text-purple-600 uppercase tracking-wide mb-1">Transactions</p>
@@ -485,7 +485,7 @@
                     </div>
                     <div class="bg-green-50/50 p-4 rounded-xl border border-green-100">
                         <p class="text-xs font-semibold text-green-600 uppercase tracking-wide mb-1">Panier Moyen</p>
-                        <p class="text-2xl font-bold text-gray-900" id="seller-detail-avg">0,00 €</p>
+                        <p class="text-2xl font-bold text-gray-900" id="seller-detail-avg">0 FCFA</p>
                     </div>
                 </div>
 
@@ -525,9 +525,9 @@
     </style>
 
     <!-- Scripts -->
-    <script src="js/storage.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/admin.js"></script>
+    <script src="./js/storage.js"></script>
+    <script src="./js/auth.js"></script>
+    <script src="./js/admin.js"></script>
 </body>
 
 </html>
