--- a/black lbv girls/index.html
+++ b/black lbv girls/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - RetailOS</title>
+    <title>Connexion - Black LBV Girl</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -58,7 +58,7 @@
                     class="w-12 h-12 bg-primary rounded-xl flex items-center justify-center shadow-lg shadow-primary/30">
                     <span class="material-symbols-outlined text-3xl">storefront</span>
                 </div>
-                <h1 class="text-4xl font-bold tracking-tight">RetailOS</h1>
+                <h1 class="text-4xl font-bold tracking-tight">Black LBV Girl</h1>
             </div>
             <p class="text-xl text-gray-300 font-light leading-relaxed mb-8">
                 Gérez votre boutique avec élégance et efficacité. Une solution tout-en-un pour les ventes, les stocks et
@@ -107,7 +107,7 @@
                 <div class="w-10 h-10 bg-primary rounded-lg flex items-center justify-center text-white">
                     <span class="material-symbols-outlined">storefront</span>
                 </div>
-                <h1 class="text-2xl font-bold text-gray-900">RetailOS</h1>
+                <h1 class="text-2xl font-bold text-gray-900">Black LBV Girl</h1>
             </div>
 
             <div class="text-center lg:text-left">
@@ -195,7 +195,7 @@
             </form>
 
             <div class="mt-6 text-center">
-                <p class="text-xs text-gray-400">© 2026 RetailOS. Tous droits réservés.</p>
+                <p class="text-xs text-gray-400">© 2026 Black LBV Girl. Tous droits réservés.</p>
                 <button onclick="resetApp()"
                     class="mt-4 text-xs text-gray-300 hover:text-gray-500 underline transition-colors">Réinitialiser les
                     données (Debug)</button>
@@ -204,8 +204,8 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/storage.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="./js/storage.js" onerror="console.error('Failed to load storage.js')"></script>
+    <script src="./js/auth.js" onerror="console.error('Failed to load auth.js')"></script>
     <script>
         // Check if already logged in (optional auto-redirect)
         /*
@@ -309,13 +309,17 @@
 
         function resetApp() {
             if (confirm('Cela va réinitialiser la base de données locale par défaut. Continuer ?')) {
-                if (window.StorageHelper) {
-                    window.StorageHelper.resetDatabase();
-                    alert('Base de données restaurée. Page rechargée.');
-                    window.location.reload();
-                } else {
-                    alert('Impossible de trouver StorageHelper. Essayez de vider le cache du navigateur.');
+                // Try to reload scripts if missing
+                if (!window.StorageHelper) {
+                    console.log('StorageHelper missing, attempting to fix...');
+                    // This is a last resort check
+                    alert('Erreur: Les fichiers système (JS) ne sont pas accessibles. Vérifiez votre connexion ou les permissions du dossier. (404 Not Found suspecté)');
+                    return;
                 }
+
+                window.StorageHelper.resetDatabase();
+                alert('Base de données restaurée. Page rechargée.');
+                window.location.reload();
             }
         }
     </script>
