--- a/black lbv girls/admin_dashboard.html
+++ b/black lbv girls/admin_dashboard.html
@@ -525,9 +525,9 @@
     </style>
 
     <!-- Scripts -->
-    <script src="./js/storage.js"></script>
-    <script src="./js/auth.js"></script>
-    <script src="./js/admin.js"></script>
+    <script src="storage.js"></script>
+    <script src="auth.js"></script>
+    <script src="admin.js"></script>
 </body>
 
 </html>
