--- a/black lbv girls/vendeuse_dashboard.html
+++ b/black lbv girls/vendeuse_dashboard.html
@@ -432,9 +432,9 @@
     </div>
 
     <!-- Scripts -->
-    <script src="./js/storage.js"></script>
-    <script src="./js/auth.js"></script>
-    <script src="./js/vendeuse.js"></script>
+    <script src="storage.js"></script>
+    <script src="auth.js"></script>
+    <script src="vendeuse.js"></script>
 </body>
 
 </html>
