--- a/black lbv girls/manager_dashboard.html
+++ b/black lbv girls/manager_dashboard.html
@@ -392,9 +392,9 @@
         </div>
     </div>
 
-    <script src="js/storage.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/manager.js"></script>
+    <script src="scripts/storage.js"></script>
+    <script src="scripts/auth.js"></script>
+    <script src="scripts/manager.js"></script>
     <script>
         // Init
         document.addEventListener('DOMContentLoaded', () => {
