--- a/black lbv girls/index.html
+++ b/black lbv girls/index.html
@@ -209,10 +209,10 @@
     </div>
 
     <!-- Scripts -->
-    <script src="scripts/storage.js"
-        onerror="console.error('Failed to load scripts/storage.js'); alert('Erreur: Impossible de charger scripts/storage.js.');"></script>
-    <script src="scripts/auth.js"
-        onerror="console.error('Failed to load scripts/auth.js'); alert('Erreur: Impossible de charger scripts/auth.js.');"></script>
+    <script src="/scripts/storage.js"
+        onerror="console.error('Failed to load /scripts/storage.js'); alert('Erreur: Impossible de charger /scripts/storage.js.');"></script>
+    <script src="/scripts/auth.js"
+        onerror="console.error('Failed to load /scripts/auth.js'); alert('Erreur: Impossible de charger /scripts/auth.js.');"></script>
     <script>
         // Check if already logged in (optional auto-redirect)
         /*
