--- a/black lbv girls/admin_dashboard.html
+++ b/black lbv girls/admin_dashboard.html
@@ -558,9 +558,9 @@
     </style>
 
     <!-- Scripts -->
-    <script src="/scripts/storage.js"></script>
-    <script src="/scripts/auth.js"></script>
-    <script src="/scripts/admin.js"></script>
+    <script src="logic/storage.js"></script>
+    <script src="logic/auth.js"></script>
+    <script src="logic/admin.js"></script>
 </body>
 
 </html>
