--- a/black lbv girls/vendeuse_dashboard.html
+++ b/black lbv girls/vendeuse_dashboard.html
@@ -532,9 +532,9 @@
     </div>
 
     <!-- Scripts -->
-    <script src="/scripts/storage.js"></script>
-    <script src="/scripts/auth.js"></script>
-    <script src="/scripts/vendeuse.js"></script>
+    <script src="logic/storage.js"></script>
+    <script src="logic/auth.js"></script>
+    <script src="logic/vendeuse.js"></script>
     <script>
         // Init
         document.addEventListener('DOMContentLoaded', () => {
