--- a/black lbv girls/manager_dashboard.html
+++ b/black lbv girls/manager_dashboard.html
@@ -392,9 +392,9 @@
         </div>
     </div>
 
-    <script src="logic/storage.js"></script>
-    <script src="logic/auth.js"></script>
-    <script src="logic/manager.js"></script>
+    <script src="storage.js"></script>
+    <script src="auth.js"></script>
+    <script src="manager.js"></script>
     <script>
         // Init
         document.addEventListener('DOMContentLoaded', () => {
